# faRT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build-linux.sh  build-macos.sh  build-web.sh  build-win64.bat  build.sh
dependencies/: CMakeLists.txt
dependencies/bin2c/: CMakeLists.txt  bin2c.cmake  embed_shaders.cmake
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/optix/: CMakeLists.txt  PtxEmbed.cmake
dependencies/stb/: CMakeLists.txt
dependencies/webgpu/: CMakeLists.txt  webgpu.cmake
resources/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/common/: app.cpp  app.h  camera.cpp  camera.h  cie.h  defs.h  image.cpp  image.h  light.h  material.h  mesh.h  renderer.h  scene.cpp  scene.h  window.cpp  window.h
src/metal/: CMakeLists.txt  mesh.cpp  mesh.h  renderer.cpp  renderer.h  renderer.mm  texture.cpp  texture.h  triangle.metal
src/metal/msl/: pathtracer.metal  postprocess.h
src/metal/msl/common/: color.h  material.h  random.h  sampling.h  types.h
src/opengl/: CMakeLists.txt  aabb.cpp  aabb.h  buffer.cpp  buffer.h  bvh.cpp  bvh.h  framebuffer.cpp  framebuffer.h  gldefs.h  pathtracer.frag.glsl  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  tlas.cpp  tlas.h  triangle.frag.glsl  triangle.vert.glsl  vertex_array.cpp  vertex_array.h
src/opengl/glsl/: accum.frag.glsl  pathtracer.frag.glsl  postprocess.frag.glsl  postprocess.vert.glsl
src/opengl/glsl/common/: color.glsl  data.glsl  intersect.glsl  light.glsl  material.glsl  random.glsl  sampling.glsl  types.glsl
src/optix/: CMakeLists.txt  buffer.h  mesh.cpp  mesh.h  optixdefs.h  renderer.cpp  renderer.h
src/optix/cuda/: pathtracer.cu
src/optix/cuda/common/: types.cuh
src/webgpu/: CMakeLists.txt  buffer.h  bvh.cpp  bvh.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  tlas.cpp  types.h
src/webgpu/web/: pre.js
src/webgpu/wgsl/: pathtracer.wgsl  postprocess.wgsl
